# project-charon

./: .gitignore  Readme.md  pyproject.toml
config/: project-config.yaml
data/: book_list.json  movie_and_show.json  substack_newsletters.json  youtube_channels.json
data/sessions/: session_ids.json
notebooks/: testing_file_loading.ipynb
src/agents/: agent.py  big_boss_orchestrator_agent.py  books_agent.py  file_search_agent.py  github_agent.py  google_calendar_agent.py  home_agent.py  movies_agent.py  recommender_agent.py  task_agent.py
src/cli/: charon_cli.py
src/pipelines/: running_book_agent.py  running_calendar_agent.py  running_home_agent.py  running_task_agent.py  running_voice_orchestrator_kokoro_tts.py
src/schemas/: config_schema.py  file_search_returns_schemas.py
src/tools/: books_tools.py  celander_tools.py  file_search_tools.py  home_agent_tools.py  movies_tools.py  recommender_agent_tools.py  sleep_tracking_tools.py  task_agent_tools.py
src/utils/: callback_hanlder_subagents.py  charon_ascii_art.py  config_loader.py  demonic_voice_processor.py  directory_scanning.py  prompts.py  substack_api_utils.py  tts_callback_handler.py  tts_manager.py  youtube_api_utils.py
tests/: calendar_agent_tests.py
