[project]
name = "project-charon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "strands-agents-tools>=0.2.1",
    "strands-agents[litellm]>=1.0.1",
    "tools>=1.0.2",
    "tree>=0.2.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
